# ChangeLog for sci-chemistry/freeon
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  26 Oct 2014; Justin Lecher <jlec@gentoo.org> ChangeLog:
  Drop obsolete versions

  17 Sep 2014; Christoph Junghans <ottxor@gentoo.org> metadata.xml:
  updated metadata.xml

  28 Feb 2014; Nicolas Bock <nicolasbock@gentoo.org> -freeon-1.0.4.ebuild,
  -freeon-1.0.5.ebuild, -freeon-1.0.6.ebuild, -freeon-1.0.7.ebuild:
  sci-chemistry/freeon: Removing old versions.

  28 Feb 2014; Nicolas Bock <nicolasbock@gentoo.org> freeon-9999.ebuild:
  sci-chemistry/freeon-9999: Change slotting to 0.

  06 Jan 2014; Justin Lecher <jlec@gentoo.org> freeon-9999.ebuild,
  metadata.xml:
  Switch from git-2 to git-r3

  17 Dec 2013; Nicolas Bock <nicolasbock@gentoo.org> -freeon-1.0.1.ebuild,
  -freeon-1.0.2.ebuild, -freeon-1.0.3.ebuild, -freeon-1.0.ebuild:
  sci-chemistry/freeon: Removing old, masked versions.

  13 Dec 2013; Nicolas Bock <nicolasbock@gentoo.org> metadata.xml:
  sci-chemistry/freeon: Updated maintainer email to gentoo.org

  19 Nov 2013; Nicolas Bock <nicolasbock@gmail.com> freeon-1.0.8-r1.ebuild,
  freeon-9999.ebuild:
  sci-chemistry/freeon-1.0.8-r1: Fixed python dependencies.

  19 Nov 2013; Nicolas Bock <nicolasbock@gmail.com> freeon-9999.ebuild:
  sci-chemistry/freeon-9999: Fixed python dependencies.

  12 Nov 2013; Nicolas Bock <nicolasbock@gmail.com> freeon-9999.ebuild:
  sci-chemistry/freeon-9999: Cleanup of ebuild.

*freeon-1.0.8-r1 (10 Nov 2013)

  10 Nov 2013; Nicolas Bock <nicolasbock@gmail.com> +freeon-1.0.8-r1.ebuild:
  sci-chemistry/freeon-1.0.8-r1: Added python support.  The package provides
  some python scripts. This revision inherits python-r1.

*freeon-1.0.8 (09 Nov 2013)

  09 Nov 2013; Nicolas Bock <nicolasbock@gmail.com> +freeon-1.0.8.ebuild:
  sci-chemistry/freeon-1.0.8: Version bump.

  25 Oct 2013; Nicolas Bock <nicolasbock@gmail.com> freeon-1.0.7.ebuild: