@@ -1,1 +1,0 @@
-DIST freeon-1.0.8.tar.bz2 5957707 SHA256 ae14c1b640e4dcd9f18d2807f2debf9fc005b7451401e3e5d7b9dc76919f381d SHA512 1227f670a73b4ea39beb26e4136ad535e126ad17d66171c31b3bd403a3886eee150cda865806a2d9dad85646ccb086a6be4f645455eab24603cb064fb725efbd WHIRLPOOL b41a3b1e4bb152309a12ac0c4fec07c932809bb465af4b08cb76f6e0bf089c4d91682e1428c47d1adb449d153a1338cd3d540e860ca22774a299e21da44a16c1
