@@ -2,6 +2,10 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  19 Dec 2014; Nicolas Bock <nicolasbock@gentoo.org> -Manifest,
+  -freeon-1.0.8-r1.ebuild, -freeon-1.0.8.ebuild:
+  sci-chemistry/freeon: Cleaning up old ebuilds.
+
   26 Oct 2014; Justin Lecher <jlec@gentoo.org> ChangeLog:
   Drop obsolete versions
 
